src/index.css
@font-face {
  font-family: 'Noto Sans JP';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  font-feature-settings: 'vert';
  src: local('Noto Sans Japanese Regular'),
       local('NotoSansJapanese-Regular'),
       url(https://fonts.gstatic.com/s/notosansjp/v25/-F62fjtqLzI2JPCgQBnw7HFowA.otf)
       format('opentype');
}
body {
  margin: 0;
  padding: 0;
}
#map {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
}
#crosshair {
  position: absolute;
  top: calc(50% - 12px);
  left: calc(50% - 12px);
}
.layer-switcher div.panel {
  padding: 0;
  font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
}
.layer-switcher div.panel ul {
  margin: 0;
  padding: 0;
}
.ol-popup {
  position: absolute;
  background-color: white;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
  padding: 5px;
  border-radius: 10px;
  border: 1px solid #cccccc;
  bottom: 12px;
  left: -50px;
  font-size: 14px;
  white-space: nowrap;
}
.ol-popup:after, .ol-popup:before {
  top: 100%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}
.ol-popup:after {
  border-top-color: white;
  border-width: 10px;
  left: 48px;
  margin-left: -10px;
}
.ol-popup:before {
  border-top-color: #cccccc;
  border-width: 11px;
  left: 48px;
  margin-left: -11px;
}
.ol-popup-content {
  min-width: auto;
}
.ol-popup-closer {
  text-decoration: none;
  position: absolute;
  top: 2px;
  right: 8px;
  padding: 0;
  font-size: 14px;
  content: "✖";
}
.ol-popup-closer:hover {
  cursor: pointer;
}
.ol-popup h2 {
  margin: 0;
  padding: 0 2em 0 0;
  font-size: .875rem;
  font-weight: normal;
  color: red;
}
.ol-popup td {
  font-size: .875rem;
  padding: 0;
  vertical-align: top;
}
.ol-popup td:first-child {
  padding-right: 1em;
  color: blue;
}

